err/ng.app.rubricator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ng'...
Listing './lib/python3.5/site-packages/ng/app'...
Listing './lib/python3.5/site-packages/ng/app/rubricator'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/etc'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/filterannotation'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/filterannotation/browser'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/filterannotation/demo'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/newsref'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/newsref/newshandler'...
Compiling './lib/python3.5/site-packages/ng/app/rubricator/newsref/newshandler/newshandler.py'...
***   File "./lib/python3.5/site-packages/ng/app/rubricator/newsref/newshandler/newshandler.py", line 20
    except ComponentLookupError,msg :
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/rubricator/newsref/newsref'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/newsref/newsref/browser'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/newsref/newsref2newsadapter'...
Compiling './lib/python3.5/site-packages/ng/app/rubricator/newsref/newsref2newsadapter/newsref2newsadapter.py'...
***   File "./lib/python3.5/site-packages/ng/app/rubricator/newsref/newsref2newsadapter/newsref2newsadapter.py", line 23
    except ComponentLookupError,msg :
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/rubricator/newsref/newsrefbackreference'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/newsref/newsrefbackreference/browser'...
Compiling './lib/python3.5/site-packages/ng/app/rubricator/newsref/newsrefbackreference/newsrefbackreference.py'...
***   File "./lib/python3.5/site-packages/ng/app/rubricator/newsref/newsrefbackreference/newsrefbackreference.py", line 49
    except KeyError, msg :
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/rubricator/newsref/newsrefhandler'...
Compiling './lib/python3.5/site-packages/ng/app/rubricator/newsref/newsrefhandler/newsrefhandler.py'...
***   File "./lib/python3.5/site-packages/ng/app/rubricator/newsref/newsrefhandler/newsrefhandler.py", line 21
    except ComponentLookupError,msg :
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/rubricator/rubricalgorithm'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/rubricalgorithm/browser'...
Compiling './lib/python3.5/site-packages/ng/app/rubricator/rubricalgorithm/rubricalgorithm.py'...
***   File "./lib/python3.5/site-packages/ng/app/rubricator/rubricalgorithm/rubricalgorithm.py", line 97
    except TypeError,msg :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/rubricator/rubricalgorithm/rulesetevaluatorvocabulary'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/rubrichandler'...
Compiling './lib/python3.5/site-packages/ng/app/rubricator/rubrichandler/rubrichandler.py'...
***   File "./lib/python3.5/site-packages/ng/app/rubricator/rubrichandler/rubrichandler.py", line 32
    except ComponentLookupError,msg :
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/rubricator/rulehandler'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/ruleset2z'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/ruleset2z/browser'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/rulesetevaluator'...
Listing './lib/python3.5/site-packages/ng/app/rubricator/rulesetevaluator/browser'...
Compiling './lib/python3.5/site-packages/ng/app/rubricator/rulesetevaluator/rulesetevaluator.py'...
***   File "./lib/python3.5/site-packages/ng/app/rubricator/rulesetevaluator/rulesetevaluator.py", line 39
    except TypeError,msg :
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ng/app/rubricator/ruletraverser'...
Listing './lib/python3.5/site-packages/ng.app.rubricator-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
